+ Improvements on UIForm, styles, bugfixes on Router, m.app.go

--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -1,4 +1,4 @@
-<form id="myForm" class="m-form">
+<form id="myForm" class="m-form m-padding">
     <fieldset class="m-form-top-labels">
 
         <div class="m-field">
@@ -43,9 +43,9 @@
 
         <div class="m-field">
             <label for="select2">Select</label>
-            <select class="m-select" id="select2">
+            <select class="m-select" id="select2" placeholder="Select...">
                 <option value="01">Option 1</option>
-                <option value="02" selected>Option 2</option>
+                <option value="02">Option 2</option>
                 <option value="03">Option 3</option>
             </select>
         </div>
@@ -95,18 +95,6 @@
             <label>TextArea</label>
             <textarea class="m-textarea" placeholder="Text here"></textarea>
         </div>
-        <div class="m-field m-error">
-            <label>TextArea with error</label>
-            <textarea class="m-textarea" placeholder="Text here"></textarea>
-        </div>
-        <div class="m-field m-warning">
-            <label>TextArea with warning</label>
-            <textarea class="m-textarea" placeholder="Text here"></textarea>
-        </div>
-        <div class="m-field m-success">
-            <label>TextArea with success</label>
-            <textarea class="m-textarea" placeholder="Text here"></textarea>
-        </div>
 
     </fieldset>
 
@@ -114,8 +102,6 @@
         <input class="m-text" placeholder="Text without label" />
     </div>
     
-    <div class="m-field">
-        <button type="submit" class="m-button m-button-success m-button-block">Submit this form</button>
-    </div>
+    <button type="submit" class="m-button m-button-success m-button-block">Submit this form</button>
 
 </form>
