--- a/source/css/_text.scss
+++ b/source/css/_text.scss
@@ -30,15 +30,12 @@ a {
 
 
 h2,h3,h4,h5,h6 {
-    margin-bottom: .7em;
+    margin: .35em 0 .35em;
 	line-height: 150%;	
 }
 
 h1 {
-    font-size: 1.6em;
-    margin-bottom: .7em;
-    margin-top: .5em;
-    
+    font-size: 1.6em;    
     line-height: 140%;
     font-weight: 400;
     font-family: 'Helvetica Neue Medium', Roboto, sans-serif;
