--- a/source/css/_uiformoption.scss
+++ b/source/css/_uiformoption.scss
@@ -6,7 +6,7 @@
 
 .m-option-icon {
 	position: absolute;
-	right: 10px;
+	right: 0;
     margin-top: 10px;
 }
 
@@ -31,7 +31,6 @@
 		height: 1.4em;
 		display: inline-block;
 		overflow: hidden;
-		margin-right: 21px;
 	}
 }	
 
