--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -1,6 +1,28 @@
 <form id="myForm" class="m-form m-padding">
     <fieldset class="m-form-top-labels">
 
+        <h2>Radio buttons</h2>
+
+        <div class="m-field">
+            <input name="radiogroup" id="radio1" checked="true" value="01" type="radio" class="m-option" />
+            <label for="radio1">Radio 1</label>
+            <input name="radiogroup" id="radio2" value="02" type="radio" class="m-option" />
+            <label for="radio2">Radio 2</label>
+            <input name="radiogroup" id="radio3" value="03" type="radio" class="m-option" />
+            <label for="radio3">Radio 3</label>
+        </div>
+
+        <h2>More radio buttons</h2>
+
+        <div class="m-field">
+            <input name="radiogroup2" id="radio4" checked="true" value="01" type="radio" class="m-option" />
+            <label for="radio4">Other radio 1</label>
+            <input name="radiogroup2" id="radio5" value="02" type="radio" class="m-option" />
+            <label for="radio5">Other radio 2</label>
+        </div>
+
+        <h2>Other controls</h2>
+        
         <div class="m-field">
             <label>Date</label>
             <input type="date" class="m-date" placeholder="Date here" />
@@ -50,16 +72,6 @@
             </select>
         </div>
 
-
-        <div class="m-field">
-            <input name="radiogroup" id="radio1" checked="true" value="01" type="radio" class="m-option" />
-            <label for="radio1">Radio 1</label>
-            <input name="radiogroup" id="radio2" value="02" type="radio" class="m-option" />
-            <label for="radio2">Radio 2</label>
-            <input name="radiogroup" id="radio3" value="03" type="radio" class="m-option" />
-            <label for="radio3">Radio 3</label>
-        </div>
-        
         <div class="m-field">
             <label>Text</label>
             <input class="m-text" placeholder="Text here" />
