--- a/source/css/_uiformselect.scss
+++ b/source/css/_uiformselect.scss
@@ -28,7 +28,7 @@ select.m-select {
 	background: white;
 	position: relative;
 
-	.m-icon-arrow-down-small {
+	.m-select-icon {
 		position: absolute;
 		right: 0;
 		top: 7px;
