--- a/demo/views/index/index.html
+++ b/demo/views/index/index.html
@@ -32,5 +32,9 @@
              <span class="m-icon-erase"></span>
              Draw
         </a>
+        <a href="#geo">
+             <span class="m-icon-map-pin"></span>
+             Geo
+        </a>
     </nav>
 </div>
