--- a/demo/views/form/form.html
+++ b/demo/views/form/form.html
@@ -30,7 +30,7 @@
             <label for="radio3">Radio 3</label>
         </div>
 
-o buttons</h2>
+<h2>More radio buttons</h2>
 
         <div class="m-field">
             <input name="radiogroup2" id="radio4" checked="true" value="01" type="radio" class="m-option" />
