--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -24,6 +24,7 @@ html, body {
 	@import "uiloading";
 	@import "uiform";
 	@import "uiformcamera";
+	@import "uiformcamerasingle";
 	@import "utils";
 	@import "list";
 }
