--- a/source/css/_uiformcamera.scss
+++ b/source/css/_uiformcamera.scss
@@ -1,30 +1,60 @@
+@import "colors";
+
+.m-camera-cover {
+    padding: .5em;
+    border-bottom-width: 1px;
+    border-style: solid;
+    @extend .m-border-color-gray-lighter;
+    .m-camera-icon {
+        position: absolute;
+        right: .5em;
+        margin-top: .25em;
+    }
+}
+
 .m-camera-container {
-	text-align:center;
-    height:80%;
-    width: 96%;
-	padding:4% 0 4% 4%;
-	overflow:scroll;
+	text-align:center; 
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    position: absolute;    
+    top: 0;
+    box-sizing: border-box;
+    z-index: 101;
 	
 	.m-camera-img {
 		width:46%;
 		height:37%;
 		margin-bottom:4%;
-		background: #ccc;
 		float:left;
 		margin-right:4%;
 		overflow:hidden;
+
+        img {
+            width:100%;
+            max-height: 100%;
+            height: auto;
+        }
 	}
 	
 	.m-camera-message {
 		margin-top:40%;
 	}
+    
+    .m-img-container {
+        width: 96%;
+        height:70%;
+        overflow:scroll;
+        padding:4% 0 4% 4%;
+    }
 }
 
-#camera-btns {	
-	width:100%;
-	height:50px;
+.m-camera-btns {	
+	width: 100%;
+	height: 50px;
     padding-top:10px;
-    position:absolute;
+    position: absolute;
+    background: white;
     bottom:0px;
 	
 	.m-choose-image, .m-take-image {
@@ -32,7 +62,7 @@
 		float:left;
 		text-align:center;
 		color:#fff;
-		background:#65b2b7;
+		@extend .m-bg-color-primary;
 		padding:8px 0px;
 	}
 
