--- a/source/css/_uiheader.scss
+++ b/source/css/_uiheader.scss
@@ -42,6 +42,8 @@
         .m-nav-item {
             position: relative;
             top: 10px;
+            padding: 0;
+            display: inline-block;
         }
                 
         &.m-hidden {
