Add UIFormCamera example

--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -24,5 +24,9 @@
              <span class="m-icon-edit"></span>
              Text
         </a>
+        <a href="#camera">
+             <span class="m-icon-camera"></span>
+             Camera
+        </a>
     </nav>
 </div>
