--- a/source/css/_uiformdate.scss
+++ b/source/css/_uiformdate.scss
@@ -1,4 +1,5 @@
 input[type=date].m-date-hidden,
+input[type=datetime-local].m-date-hidden,
 input[type=month].m-date-hidden {
 	opacity: 0.001;
     top: 0;
@@ -9,6 +10,7 @@ input[type=month].m-date-hidden {
 
 
 input[type=date].m-date,
+input[type=datetime-local].m-date,
 input[type=month].m-date {
     width: 100%;
     border: 0;
