+ Angular example app with experimental module ngMootor and old module mootor-mode.js. Updated old example apps.

--- a/examples/demo/views/buttons/buttons.html
+++ b/examples/demo/views/buttons/buttons.html
@@ -1,1 +1,1 @@
-<div id="buttons_container" class="buttons_container"></div>
+<div id="buttons_container" class="m-padding buttons_container"></div>
