--- a/examples/angular/views/index/index.html
+++ b/examples/angular/views/index/index.html
@@ -8,8 +8,7 @@
 <div class="index-view" ng-controller="IndexCtrl">
     <div class="messageEmptyList m-padding" ng-show="(items.length < 1)">
         <h1><strong>Welcome</strong> to this app!</h1>
-        <h2>
-           Con esta app podrás:</h2> 
+        <h2>You can do these things:</h2> 
 
                <ul>
            <li>Collect data, <strong>offine</strong></li>
