--- a/demo/views/buttons/buttons.html
+++ b/demo/views/buttons/buttons.html
@@ -1,1 +1,1 @@
-<div id="buttons_container" class="buttons_container"></div>
+<div id="buttons_container" class="m-padding buttons_container"></div>
