Bufix on UIFormDraw, - Deleted unused example files

--- a/examples/demo/views/form/form.html
+++ b/examples/demo/views/form/form.html
@@ -15,9 +15,21 @@
         </div>
         
         <div class="m-field">
-            <label>Firma</label>
+            <label>Draw</label>
             <input class="m-draw" accept="image/*" type="file" />
-            <img src="" title="Firma" />
+            <img id="draw1" src="" title="Draw" />
+        </div>
+
+        <div class="m-field">
+            <label>Draw 2</label>
+            <input class="m-draw" accept="image/*" type="file" />
+            <img id="draw2" src="" title="Draw again" />
+        </div>
+        
+        <div class="m-field">
+            <label>Draw 3</label>
+            <input class="m-draw" accept="image/*" type="file" />
+            <img id="draw3" src="" title="Draw 3" />
         </div>
 
         <h2>Radio buttons</h2>
